Fix the css so the body covers the full height

--- a/app/assets/stylesheets/base/_layout.scss
+++ b/app/assets/stylesheets/base/_layout.scss
@@ -1,11 +1,13 @@
 html,
 body {
-  height: 100%;
+  min-height: 100%;
 }
 
 html {
   box-sizing: border-box;
   background-color: #f8f8f8;
+  display: flex;
+  flex-direction: column;
 }
 
 *,
@@ -15,6 +17,7 @@ html {
 }
 
 .default-width {
+  width: 100%;
   margin-right: auto;
   margin-left: auto;
 
@@ -27,6 +30,7 @@ body {
   @extend .default-width;
   padding: $small-spacing $small-spacing $base-spacing * 3;
   background-color: #fff;
+  flex: 1;
 }
 
 .site-header {
